y.output
Terminaux inutilisés dans la grammaire

   NEG
   POS
   MOD
   ERROR_LEXICO


Grammaire

    0 $accept: programme $end

    1 programme: PROG corps

    2 corps: liste_declarations liste_instructions

    3 liste_declarations: liste_declarations_type liste_declarations_variable liste_declarations_pf

    4 liste_declarations_type: liste_declarations_type declaration_type POINT_VIRGULE
    5                        | %empty

    6 liste_declarations_variable: liste_declarations_variable declaration_variable POINT_VIRGULE
    7                            | %empty

    8 liste_declarations_pf: liste_declarations_pf declaration_pf POINT_VIRGULE
    9                      | %empty

   10 liste_instructions: DEBUT suite_liste_inst FIN

   11 suite_liste_inst: instruction POINT_VIRGULE
   12                 | suite_liste_inst instruction POINT_VIRGULE

   13 declaration_pf: declaration_procedure
   14               | declaration_fonction

   15 declaration_type: TYPE IDF DEUX_POINTS suite_declaration_type

   16 suite_declaration_type: STRUCT liste_champs FSTRUCT
   17                       | TABLEAU dimension DE nom_type

   18 dimension: CROCHET_OUVRANT liste_dimensions CROCHET_FERMANT

   19 liste_dimensions: une_dimension
   20                 | liste_dimensions VIRGULE une_dimension

   21 une_dimension: CSTE_ENTIERE PP CSTE_ENTIERE

   22 liste_champs: un_champ
   23             | liste_champs POINT_VIRGULE un_champ

   24 un_champ: IDF DEUX_POINTS nom_type

   25 nom_type: type_simple
   26         | IDF

   27 type_simple: ENTIER
   28            | REEL
   29            | BOOLEEN
   30            | CARACTERE
   31            | CHAINE CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

   32 declaration_variable: VARIABLE IDF DEUX_POINTS nom_type

   33 declaration_procedure: PROCEDURE IDF liste_parametres corps

   34 declaration_fonction: FONCTION IDF liste_parametres RETOURNE type_simple corps

   35 liste_parametres: %empty
   36                 | PARENTHESE_OUVRANTE liste_param PARENTHESE_FERMANTE

   37 liste_param: un_param
   38            | liste_param POINT_VIRGULE un_param

   39 un_param: IDF DEUX_POINTS type_simple

   40 instruction: affectation
   41            | condition
   42            | tant_que
   43            | appel
   44            | VIDE
   45            | RETOURNE resultat_retourne

   46 resultat_retourne: %empty
   47                  | expression

   48 appel: IDF liste_arguments

   49 liste_arguments: %empty
   50                | PARENTHESE_OUVRANTE liste_args PARENTHESE_FERMANTE

   51 liste_args: un_arg
   52           | liste_args VIRGULE un_arg

   53 un_arg: expression

   54 condition: SI eb1 ALORS liste_instructions SINON liste_instructions

   55 tant_que: TANT_QUE eb1 FAIRE liste_instructions

   56 affectation: variable OPAFF expression

   57 variable: IDF
   58         | IDF vtab
   59         | IDF POINT variable
   60         | IDF vtab POINT variable

   61 vtab: vtab CROCHET_OUVRANT ea1 CROCHET_FERMANT
   62     | CROCHET_OUVRANT ea1 CROCHET_FERMANT

   63 expression: ea1
   64           | eb1

   65 ea1: ea1 PLUS ea2
   66    | ea1 MOINS ea2
   67    | ea2

   68 ea2: ea2 MULT ea3
   69    | ea2 DIV ea3
   70    | ea3

   71 ea3: MOINS ea4
   72    | PLUS ea4
   73    | ea4

   74 ea4: PARENTHESE_OUVRANTE ea1 PARENTHESE_FERMANTE
   75    | variable
   76    | CSTE_ENTIERE
   77    | CSTE_REELLE
   78    | CARAC
   79    | CHAINECARAC

   80 eb1: eb1 OU eb2
   81    | eb2

   82 eb2: eb2 ET eb3
   83    | eb3

   84 eb3: NOT eb4
   85    | eb4

   86 eb4: PARENTHESE_OUVRANTE eb1 PARENTHESE_FERMANTE
   87    | TRUE
   88    | FALSE
   89    | comparaison

   90 comparaison: ea1 OPEG ea1
   91            | ea1 OPINF ea1
   92            | ea1 OPSUP ea1
   93            | ea1 OPINFE ea1
   94            | ea1 OPSUPE ea1
   95            | ea1 OPDIFF ea1


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
PROG (258) 1
POINT_VIRGULE (259) 4 6 8 11 12 23 38
DEBUT (260) 10
FIN (261) 10
TYPE (262) 15
IDF (263) 15 24 26 32 33 34 39 48 57 58 59 60
DEUX_POINTS (264) 15 24 32 39
STRUCT (265) 16
FSTRUCT (266) 16
TABLEAU (267) 17
DE (268) 17
CROCHET_OUVRANT (269) 18 31 61 62
CROCHET_FERMANT (270) 18 31 61 62
VIRGULE (271) 20 52
POINT (272) 59 60
VARIABLE (273) 32
PROCEDURE (274) 33
FONCTION (275) 34
PP (276) 21
ENTIER (277) 27
REEL (278) 28
BOOLEEN (279) 29
CHAINE (280) 31
CARACTERE (281) 30
CSTE_ENTIERE (282) 21 31 76
CSTE_REELLE (283) 77
CARAC (284) 78
CHAINECARAC (285) 79
PARENTHESE_FERMANTE (286) 36 50 74 86
PARENTHESE_OUVRANTE (287) 36 50 74 86
VIDE (288) 44
RETOURNE (289) 34 45
SI (290) 54
ALORS (291) 54
SINON (292) 54
TANT_QUE (293) 55
FAIRE (294) 55
OPAFF (295) 56
OPEG (296) 90
OPINF (297) 91
OPSUP (298) 92
OPINFE (299) 93
OPSUPE (300) 94
OPDIFF (301) 95
NEG (302)
POS (303)
NOT (304) 84
PLUS (305) 65 72
MOINS (306) 66 71
MULT (307) 68
DIV (308) 69
MOD (309)
ET (310) 82
OU (311) 80
TRUE (312) 87
FALSE (313) 88
ERROR_LEXICO (314)


Non-terminaux, suivis des règles où ils apparaissent

$accept (60)
    à gauche: 0
programme (61)
    à gauche: 1, à droite: 0
corps (62)
    à gauche: 2, à droite: 1 33 34
liste_declarations (63)
    à gauche: 3, à droite: 2
liste_declarations_type (64)
    à gauche: 4 5, à droite: 3 4
liste_declarations_variable (65)
    à gauche: 6 7, à droite: 3 6
liste_declarations_pf (66)
    à gauche: 8 9, à droite: 3 8
liste_instructions (67)
    à gauche: 10, à droite: 2 54 55
suite_liste_inst (68)
    à gauche: 11 12, à droite: 10 12
declaration_pf (69)
    à gauche: 13 14, à droite: 8
declaration_type (70)
    à gauche: 15, à droite: 4
suite_declaration_type (71)
    à gauche: 16 17, à droite: 15
dimension (72)
    à gauche: 18, à droite: 17
liste_dimensions (73)
    à gauche: 19 20, à droite: 18 20
une_dimension (74)
    à gauche: 21, à droite: 19 20
liste_champs (75)
    à gauche: 22 23, à droite: 16 23
un_champ (76)
    à gauche: 24, à droite: 22 23
nom_type (77)
    à gauche: 25 26, à droite: 17 24 32
type_simple (78)
    à gauche: 27 28 29 30 31, à droite: 25 34 39
declaration_variable (79)
    à gauche: 32, à droite: 6
declaration_procedure (80)
    à gauche: 33, à droite: 13
declaration_fonction (81)
    à gauche: 34, à droite: 14
liste_parametres (82)
    à gauche: 35 36, à droite: 33 34
liste_param (83)
    à gauche: 37 38, à droite: 36 38
un_param (84)
    à gauche: 39, à droite: 37 38
instruction (85)
    à gauche: 40 41 42 43 44 45, à droite: 11 12
resultat_retourne (86)
    à gauche: 46 47, à droite: 45
appel (87)
    à gauche: 48, à droite: 43
liste_arguments (88)
    à gauche: 49 50, à droite: 48
liste_args (89)
    à gauche: 51 52, à droite: 50 52
un_arg (90)
    à gauche: 53, à droite: 51 52
condition (91)
    à gauche: 54, à droite: 41
tant_que (92)
    à gauche: 55, à droite: 42
affectation (93)
    à gauche: 56, à droite: 40
variable (94)
    à gauche: 57 58 59 60, à droite: 56 59 60 75
vtab (95)
    à gauche: 61 62, à droite: 58 60 61
expression (96)
    à gauche: 63 64, à droite: 47 53 56
ea1 (97)
    à gauche: 65 66 67, à droite: 61 62 63 65 66 74 90 91 92 93 94
    95
ea2 (98)
    à gauche: 68 69 70, à droite: 65 66 67 68 69
ea3 (99)
    à gauche: 71 72 73, à droite: 68 69 70
ea4 (100)
    à gauche: 74 75 76 77 78 79, à droite: 71 72 73
eb1 (101)
    à gauche: 80 81, à droite: 54 55 64 80 86
eb2 (102)
    à gauche: 82 83, à droite: 80 81 82
eb3 (103)
    à gauche: 84 85, à droite: 82 83
eb4 (104)
    à gauche: 86 87 88 89, à droite: 84 85
comparaison (105)
    à gauche: 90 91 92 93 94 95, à droite: 89


État 0

    0 $accept: . programme $end

    PROG  décalage et aller à l'état 1

    programme  aller à l'état 2


État 1

    1 programme: PROG . corps

    $défaut  réduction par utilisation de la règle 5 (liste_declarations_type)

    corps                    aller à l'état 3
    liste_declarations       aller à l'état 4
    liste_declarations_type  aller à l'état 5


État 2

    0 $accept: programme . $end

    $end  décalage et aller à l'état 6


État 3

    1 programme: PROG corps .

    $défaut  réduction par utilisation de la règle 1 (programme)


État 4

    2 corps: liste_declarations . liste_instructions

    DEBUT  décalage et aller à l'état 7

    liste_instructions  aller à l'état 8


État 5

    3 liste_declarations: liste_declarations_type . liste_declarations_variable liste_declarations_pf
    4 liste_declarations_type: liste_declarations_type . declaration_type POINT_VIRGULE

    TYPE  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 7 (liste_declarations_variable)

    liste_declarations_variable  aller à l'état 10
    declaration_type             aller à l'état 11


État 6

    0 $accept: programme $end .

    $défaut  accepter


État 7

   10 liste_instructions: DEBUT . suite_liste_inst FIN

    IDF       décalage et aller à l'état 12
    VIDE      décalage et aller à l'état 13
    RETOURNE  décalage et aller à l'état 14
    SI        décalage et aller à l'état 15
    TANT_QUE  décalage et aller à l'état 16

    suite_liste_inst  aller à l'état 17
    instruction       aller à l'état 18
    appel             aller à l'état 19
    condition         aller à l'état 20
    tant_que          aller à l'état 21
    affectation       aller à l'état 22
    variable          aller à l'état 23


État 8

    2 corps: liste_declarations liste_instructions .

    $défaut  réduction par utilisation de la règle 2 (corps)


État 9

   15 declaration_type: TYPE . IDF DEUX_POINTS suite_declaration_type

    IDF  décalage et aller à l'état 24


État 10

    3 liste_declarations: liste_declarations_type liste_declarations_variable . liste_declarations_pf
    6 liste_declarations_variable: liste_declarations_variable . declaration_variable POINT_VIRGULE

    VARIABLE  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 9 (liste_declarations_pf)

    liste_declarations_pf  aller à l'état 26
    declaration_variable   aller à l'état 27


État 11

    4 liste_declarations_type: liste_declarations_type declaration_type . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 28


État 12

   48 appel: IDF . liste_arguments
   57 variable: IDF .
   58         | IDF . vtab
   59         | IDF . POINT variable
   60         | IDF . vtab POINT variable

    CROCHET_OUVRANT      décalage et aller à l'état 29
    POINT                décalage et aller à l'état 30
    PARENTHESE_OUVRANTE  décalage et aller à l'état 31

    OPAFF     réduction par utilisation de la règle 57 (variable)
    $défaut  réduction par utilisation de la règle 49 (liste_arguments)

    liste_arguments  aller à l'état 32
    vtab             aller à l'état 33


État 13

   44 instruction: VIDE .

    $défaut  réduction par utilisation de la règle 44 (instruction)


État 14

   45 instruction: RETOURNE . resultat_retourne

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    NOT                  décalage et aller à l'état 40
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 46 (resultat_retourne)

    resultat_retourne  aller à l'état 45
    variable           aller à l'état 46
    expression         aller à l'état 47
    ea1                aller à l'état 48
    ea2                aller à l'état 49
    ea3                aller à l'état 50
    ea4                aller à l'état 51
    eb1                aller à l'état 52
    eb2                aller à l'état 53
    eb3                aller à l'état 54
    eb4                aller à l'état 55
    comparaison        aller à l'état 56


État 15

   54 condition: SI . eb1 ALORS liste_instructions SINON liste_instructions

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    NOT                  décalage et aller à l'état 40
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    variable     aller à l'état 46
    ea1          aller à l'état 57
    ea2          aller à l'état 49
    ea3          aller à l'état 50
    ea4          aller à l'état 51
    eb1          aller à l'état 58
    eb2          aller à l'état 53
    eb3          aller à l'état 54
    eb4          aller à l'état 55
    comparaison  aller à l'état 56


État 16

   55 tant_que: TANT_QUE . eb1 FAIRE liste_instructions

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    NOT                  décalage et aller à l'état 40
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    variable     aller à l'état 46
    ea1          aller à l'état 57
    ea2          aller à l'état 49
    ea3          aller à l'état 50
    ea4          aller à l'état 51
    eb1          aller à l'état 59
    eb2          aller à l'état 53
    eb3          aller à l'état 54
    eb4          aller à l'état 55
    comparaison  aller à l'état 56


État 17

   10 liste_instructions: DEBUT suite_liste_inst . FIN
   12 suite_liste_inst: suite_liste_inst . instruction POINT_VIRGULE

    FIN       décalage et aller à l'état 60
    IDF       décalage et aller à l'état 12
    VIDE      décalage et aller à l'état 13
    RETOURNE  décalage et aller à l'état 14
    SI        décalage et aller à l'état 15
    TANT_QUE  décalage et aller à l'état 16

    instruction  aller à l'état 61
    appel        aller à l'état 19
    condition    aller à l'état 20
    tant_que     aller à l'état 21
    affectation  aller à l'état 22
    variable     aller à l'état 23


État 18

   11 suite_liste_inst: instruction . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 62


État 19

   43 instruction: appel .

    $défaut  réduction par utilisation de la règle 43 (instruction)


État 20

   41 instruction: condition .

    $défaut  réduction par utilisation de la règle 41 (instruction)


État 21

   42 instruction: tant_que .

    $défaut  réduction par utilisation de la règle 42 (instruction)


État 22

   40 instruction: affectation .

    $défaut  réduction par utilisation de la règle 40 (instruction)


État 23

   56 affectation: variable . OPAFF expression

    OPAFF  décalage et aller à l'état 63


État 24

   15 declaration_type: TYPE IDF . DEUX_POINTS suite_declaration_type

    DEUX_POINTS  décalage et aller à l'état 64


État 25

   32 declaration_variable: VARIABLE . IDF DEUX_POINTS nom_type

    IDF  décalage et aller à l'état 65


État 26

    3 liste_declarations: liste_declarations_type liste_declarations_variable liste_declarations_pf .
    8 liste_declarations_pf: liste_declarations_pf . declaration_pf POINT_VIRGULE

    PROCEDURE  décalage et aller à l'état 66
    FONCTION   décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 3 (liste_declarations)

    declaration_pf         aller à l'état 68
    declaration_procedure  aller à l'état 69
    declaration_fonction   aller à l'état 70


État 27

    6 liste_declarations_variable: liste_declarations_variable declaration_variable . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 71


État 28

    4 liste_declarations_type: liste_declarations_type declaration_type POINT_VIRGULE .

    $défaut  réduction par utilisation de la règle 4 (liste_declarations_type)


État 29

   62 vtab: CROCHET_OUVRANT . ea1 CROCHET_FERMANT

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 72
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42

    variable  aller à l'état 46
    ea1       aller à l'état 73
    ea2       aller à l'état 49
    ea3       aller à l'état 50
    ea4       aller à l'état 51


État 30

   59 variable: IDF POINT . variable

    IDF  décalage et aller à l'état 34

    variable  aller à l'état 74


État 31

   50 liste_arguments: PARENTHESE_OUVRANTE . liste_args PARENTHESE_FERMANTE

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    NOT                  décalage et aller à l'état 40
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    liste_args   aller à l'état 75
    un_arg       aller à l'état 76
    variable     aller à l'état 46
    expression   aller à l'état 77
    ea1          aller à l'état 48
    ea2          aller à l'état 49
    ea3          aller à l'état 50
    ea4          aller à l'état 51
    eb1          aller à l'état 52
    eb2          aller à l'état 53
    eb3          aller à l'état 54
    eb4          aller à l'état 55
    comparaison  aller à l'état 56


État 32

   48 appel: IDF liste_arguments .

    $défaut  réduction par utilisation de la règle 48 (appel)


État 33

   58 variable: IDF vtab .
   60         | IDF vtab . POINT variable
   61 vtab: vtab . CROCHET_OUVRANT ea1 CROCHET_FERMANT

    CROCHET_OUVRANT  décalage et aller à l'état 78
    POINT            décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 58 (variable)


État 34

   57 variable: IDF .
   58         | IDF . vtab
   59         | IDF . POINT variable
   60         | IDF . vtab POINT variable

    CROCHET_OUVRANT  décalage et aller à l'état 29
    POINT            décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 57 (variable)

    vtab  aller à l'état 33


État 35

   76 ea4: CSTE_ENTIERE .

    $défaut  réduction par utilisation de la règle 76 (ea4)


État 36

   77 ea4: CSTE_REELLE .

    $défaut  réduction par utilisation de la règle 77 (ea4)


État 37

   78 ea4: CARAC .

    $défaut  réduction par utilisation de la règle 78 (ea4)


État 38

   79 ea4: CHAINECARAC .

    $défaut  réduction par utilisation de la règle 79 (ea4)


État 39

   74 ea4: PARENTHESE_OUVRANTE . ea1 PARENTHESE_FERMANTE
   86 eb4: PARENTHESE_OUVRANTE . eb1 PARENTHESE_FERMANTE

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    NOT                  décalage et aller à l'état 40
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    variable     aller à l'état 46
    ea1          aller à l'état 80
    ea2          aller à l'état 49
    ea3          aller à l'état 50
    ea4          aller à l'état 51
    eb1          aller à l'état 81
    eb2          aller à l'état 53
    eb3          aller à l'état 54
    eb4          aller à l'état 55
    comparaison  aller à l'état 56


État 40

   84 eb3: NOT . eb4

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    variable     aller à l'état 46
    ea1          aller à l'état 57
    ea2          aller à l'état 49
    ea3          aller à l'état 50
    ea4          aller à l'état 51
    eb4          aller à l'état 82
    comparaison  aller à l'état 56


État 41

   72 ea3: PLUS . ea4

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 72

    variable  aller à l'état 46
    ea4       aller à l'état 83


État 42

   71 ea3: MOINS . ea4

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 72

    variable  aller à l'état 46
    ea4       aller à l'état 84


État 43

   87 eb4: TRUE .

    $défaut  réduction par utilisation de la règle 87 (eb4)


État 44

   88 eb4: FALSE .

    $défaut  réduction par utilisation de la règle 88 (eb4)


État 45

   45 instruction: RETOURNE resultat_retourne .

    $défaut  réduction par utilisation de la règle 45 (instruction)


État 46

   75 ea4: variable .

    $défaut  réduction par utilisation de la règle 75 (ea4)


État 47

   47 resultat_retourne: expression .

    $défaut  réduction par utilisation de la règle 47 (resultat_retourne)


État 48

   63 expression: ea1 .
   65 ea1: ea1 . PLUS ea2
   66    | ea1 . MOINS ea2
   90 comparaison: ea1 . OPEG ea1
   91            | ea1 . OPINF ea1
   92            | ea1 . OPSUP ea1
   93            | ea1 . OPINFE ea1
   94            | ea1 . OPSUPE ea1
   95            | ea1 . OPDIFF ea1

    OPEG    décalage et aller à l'état 85
    OPINF   décalage et aller à l'état 86
    OPSUP   décalage et aller à l'état 87
    OPINFE  décalage et aller à l'état 88
    OPSUPE  décalage et aller à l'état 89
    OPDIFF  décalage et aller à l'état 90
    PLUS    décalage et aller à l'état 91
    MOINS   décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 63 (expression)


État 49

   67 ea1: ea2 .
   68 ea2: ea2 . MULT ea3
   69    | ea2 . DIV ea3

    MULT  décalage et aller à l'état 93
    DIV   décalage et aller à l'état 94

    $défaut  réduction par utilisation de la règle 67 (ea1)


État 50

   70 ea2: ea3 .

    $défaut  réduction par utilisation de la règle 70 (ea2)


État 51

   73 ea3: ea4 .

    $défaut  réduction par utilisation de la règle 73 (ea3)


État 52

   64 expression: eb1 .
   80 eb1: eb1 . OU eb2

    OU  décalage et aller à l'état 95

    $défaut  réduction par utilisation de la règle 64 (expression)


État 53

   81 eb1: eb2 .
   82 eb2: eb2 . ET eb3

    ET  décalage et aller à l'état 96

    $défaut  réduction par utilisation de la règle 81 (eb1)


État 54

   83 eb2: eb3 .

    $défaut  réduction par utilisation de la règle 83 (eb2)


État 55

   85 eb3: eb4 .

    $défaut  réduction par utilisation de la règle 85 (eb3)


État 56

   89 eb4: comparaison .

    $défaut  réduction par utilisation de la règle 89 (eb4)


État 57

   65 ea1: ea1 . PLUS ea2
   66    | ea1 . MOINS ea2
   90 comparaison: ea1 . OPEG ea1
   91            | ea1 . OPINF ea1
   92            | ea1 . OPSUP ea1
   93            | ea1 . OPINFE ea1
   94            | ea1 . OPSUPE ea1
   95            | ea1 . OPDIFF ea1

    OPEG    décalage et aller à l'état 85
    OPINF   décalage et aller à l'état 86
    OPSUP   décalage et aller à l'état 87
    OPINFE  décalage et aller à l'état 88
    OPSUPE  décalage et aller à l'état 89
    OPDIFF  décalage et aller à l'état 90
    PLUS    décalage et aller à l'état 91
    MOINS   décalage et aller à l'état 92


État 58

   54 condition: SI eb1 . ALORS liste_instructions SINON liste_instructions
   80 eb1: eb1 . OU eb2

    ALORS  décalage et aller à l'état 97
    OU     décalage et aller à l'état 95


État 59

   55 tant_que: TANT_QUE eb1 . FAIRE liste_instructions
   80 eb1: eb1 . OU eb2

    FAIRE  décalage et aller à l'état 98
    OU     décalage et aller à l'état 95


État 60

   10 liste_instructions: DEBUT suite_liste_inst FIN .

    $défaut  réduction par utilisation de la règle 10 (liste_instructions)


État 61

   12 suite_liste_inst: suite_liste_inst instruction . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 99


État 62

   11 suite_liste_inst: instruction POINT_VIRGULE .

    $défaut  réduction par utilisation de la règle 11 (suite_liste_inst)


État 63

   56 affectation: variable OPAFF . expression

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 39
    NOT                  décalage et aller à l'état 40
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42
    TRUE                 décalage et aller à l'état 43
    FALSE                décalage et aller à l'état 44

    variable     aller à l'état 46
    expression   aller à l'état 100
    ea1          aller à l'état 48
    ea2          aller à l'état 49
    ea3          aller à l'état 50
    ea4          aller à l'état 51
    eb1          aller à l'état 52
    eb2          aller à l'état 53
    eb3          aller à l'état 54
    eb4          aller à l'état 55
    comparaison  aller à l'état 56


État 64

   15 declaration_type: TYPE IDF DEUX_POINTS . suite_declaration_type

    STRUCT   décalage et aller à l'état 101
    TABLEAU  décalage et aller à l'état 102

    suite_declaration_type  aller à l'état 103


État 65

   32 declaration_variable: VARIABLE IDF . DEUX_POINTS nom_type

    DEUX_POINTS  décalage et aller à l'état 104


État 66

   33 declaration_procedure: PROCEDURE . IDF liste_parametres corps

    IDF  décalage et aller à l'état 105


État 67

   34 declaration_fonction: FONCTION . IDF liste_parametres RETOURNE type_simple corps

    IDF  décalage et aller à l'état 106


État 68

    8 liste_declarations_pf: liste_declarations_pf declaration_pf . POINT_VIRGULE

    POINT_VIRGULE  décalage et aller à l'état 107


État 69

   13 declaration_pf: declaration_procedure .

    $défaut  réduction par utilisation de la règle 13 (declaration_pf)


État 70

   14 declaration_pf: declaration_fonction .

    $défaut  réduction par utilisation de la règle 14 (declaration_pf)


État 71

    6 liste_declarations_variable: liste_declarations_variable declaration_variable POINT_VIRGULE .

    $défaut  réduction par utilisation de la règle 6 (liste_declarations_variable)


État 72

   74 ea4: PARENTHESE_OUVRANTE . ea1 PARENTHESE_FERMANTE

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 72
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42

    variable  aller à l'état 46
    ea1       aller à l'état 108
    ea2       aller à l'état 49
    ea3       aller à l'état 50
    ea4       aller à l'état 51


État 73

   62 vtab: CROCHET_OUVRANT ea1 . CROCHET_FERMANT
   65 ea1: ea1 . PLUS ea2
   66    | ea1 . MOINS ea2

    CROCHET_FERMANT  décalage et aller à l'état 109
    PLUS             décalage et aller à l'état 91
    MOINS            décalage et aller à l'état 92


État 74

   59 variable: IDF POINT variable .

    $défaut  réduction par utilisation de la règle 59 (variable)


État 75

   50 liste_arguments: PARENTHESE_OUVRANTE liste_args . PARENTHESE_FERMANTE
   52 liste_args: liste_args . VIRGULE un_arg

    VIRGULE              décalage et aller à l'état 110
    PARENTHESE_FERMANTE  décalage et aller à l'état 111


État 76

   51 liste_args: un_arg .

    $défaut  réduction par utilisation de la règle 51 (liste_args)


État 77

   53 un_arg: expression .

    $défaut  réduction par utilisation de la règle 53 (un_arg)


État 78

   61 vtab: vtab CROCHET_OUVRANT . ea1 CROCHET_FERMANT

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 72
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42

    variable  aller à l'état 46
    ea1       aller à l'état 112
    ea2       aller à l'état 49
    ea3       aller à l'état 50
    ea4       aller à l'état 51


État 79

   60 variable: IDF vtab POINT . variable

    IDF  décalage et aller à l'état 34

    variable  aller à l'état 113


État 80

   65 ea1: ea1 . PLUS ea2
   66    | ea1 . MOINS ea2
   74 ea4: PARENTHESE_OUVRANTE ea1 . PARENTHESE_FERMANTE
   90 comparaison: ea1 . OPEG ea1
   91            | ea1 . OPINF ea1
   92            | ea1 . OPSUP ea1
   93            | ea1 . OPINFE ea1
   94            | ea1 . OPSUPE ea1
   95            | ea1 . OPDIFF ea1

    PARENTHESE_FERMANTE  décalage et aller à l'état 114
    OPEG                 décalage et aller à l'état 85
    OPINF                décalage et aller à l'état 86
    OPSUP                décalage et aller à l'état 87
    OPINFE               décalage et aller à l'état 88
    OPSUPE               décalage et aller à l'état 89
    OPDIFF               décalage et aller à l'état 90
    PLUS                 décalage et aller à l'état 91
    MOINS                décalage et aller à l'état 92


État 81

   80 eb1: eb1 . OU eb2
   86 eb4: PARENTHESE_OUVRANTE eb1 . PARENTHESE_FERMANTE

    PARENTHESE_FERMANTE  décalage et aller à l'état 115
    OU                   décalage et aller à l'état 95


État 82

   84 eb3: NOT eb4 .

    $défaut  réduction par utilisation de la règle 84 (eb3)


État 83

   72 ea3: PLUS ea4 .

    $défaut  réduction par utilisation de la règle 72 (ea3)


État 84

   71 ea3: MOINS ea4 .

    $défaut  réduction par utilisation de la règle 71 (ea3)


État 85

   90 comparaison: ea1 OPEG . ea1

    IDF                  décalage et aller à l'état 34
    CSTE_ENTIERE         décalage et aller à l'état 35
    CSTE_REELLE          décalage et aller à l'état 36
    CARAC                décalage et aller à l'état 37
    CHAINECARAC          décalage et aller à l'état 38
    PARENTHESE_OUVRANTE  décalage et aller à l'état 72
    PLUS                 décalage et aller à l'état 41
    MOINS                décalage et aller à l'état 42

    variable  aller à l'état 46
    ea1       aller à l'état 116
    ea2       aller à l'état 49
    ea3       aller à l'état 50
    ea4       aller à l'état 51


État 86
